# docs2mdd

./: .gitignore  README.ko.md  README.md  config.yaml  pyproject.toml
docs2mdd/: __init__.py  config.py  daemon.py  main.py  watcher.py
docs2mdd/converter/: __init__.py  base.py  docx.py  html.py  hwpx.py  pdf.py  pptx.py  xlsx.py
